fixed unwanted horizontal scroll

--- a/unit-selection-app/src/assets/scss/_navigation.scss
+++ b/unit-selection-app/src/assets/scss/_navigation.scss
@@ -1,5 +1,5 @@
 .site-navigation{
-    height: 50px;
+    height: 5vh;
     width: 100%;
     display: flex;
     justify-content: space-between;
